<resources>
    <string name="app_name">FitnessApp</string>
    <string-array name="gender_spinner_items">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="goal_spinner_items">
        <item>Gain muscle</item>
        <item>Loose weight</item>
    </string-array>
    <string name="login_status">com.example.fitnessapp.login</string>
    <string name="benchPress">benchpress</string>
    <string name="benchpressDes">The bench press is an upper-body weight training exercise in which the trainee presses a weight upwards while lying on a weight training bench. The exercise uses the pectoralis major, the anterior deltoids, and the triceps, among other stabilizing muscles. A barbell is generally used to hold the weight, but a pair of dumbbells can also be used.</string>
    <string name="benchpressVideo">vthMCtgVtFw</string>
    <string name="inclineDumbbellFlye">inclinedumbbellflye</string>
    <string name="inclinedumbbellflyeDes">The chest fly or pectoral fly (abbreviated to pec fly) primarily works the pectoralis major muscles to move the arms horizontally forward. If medially (internally) rotated, it is assisted in this by the anterior (front) head of the deltoideus in transverse flexion. If laterally (externally) rotated, the contribution of the deltoid is lessened and the pec major is strongly emphasized as the transverse adductor</string>
    <string name="inclinedumbbellflyeVideo">S298ziysRdI</string>
    <string name="cableCrossover">cablecrossover</string>
    <string name="cablecrossoverDes">The cable crossover is a great chest exercise because it stretches the pecs from the start position, hitting the outer pec muscle fibers. Your pulley position is determined by the area of the chest you want to target.
        Setting the pulleys in the highest position focuses on the lower pecs, while the lowest position will work your upper pecs. Placing the pulleys at shoulder height—with arms parallel to the floor—will target your middle pec fibers.</string>
    <string name="cablecrossoverVideo">taI4XduLpTk</string>
    <string name="dumbbellFlye">dumbbellflye</string>
    <string name="dumbbellflyeDes">Lie with your head and shoulders supported by the bench and your feet flat on the floor. Hold the dumbbells directly above your chest, palms facing each other, then lower the weights in an arc out to the sides as far as is comfortable. Use your pectoral muscles to reverse the movement back to the start. Keep a slight bend in your elbows throughout and don’t arch your back.</string>
    <string name="dumbbellflyeVideo">eozdVDA78K0</string>
    <string name="chestPressMachine">chestpressmachine</string>
    <string name="chestPressMachineDes">The seated chest press machine is an upright version of the standard lying bench press machine. The arms, placed under a weight-bearing load, are pushed away from the chest and returned to starting position. The chest press helps build the pectoral muscles as well as the biceps, deltoids, and latissimus dorsi muscles.</string>
    <string name="chestPressMachineVideo">xUm0BiZCWlQ</string>
    <string name="pushup">pushup</string>
    <string name="pushupDes">A pushup isnt just a chest exercise. It\'s a position of full body tension (or it should be). So start in a good plank: shoulders squeezed, glutes tight, abs tight. Check your form with this video guide to make sure you\'re in the proper position.</string>
    <string name="pushupVideo">IODxDxX7oi4</string>
    <string name="bentOverBarbellRow">bentoverbarbellrow</string>
    <string name="bentoverbarbellrowDes">The barbell bent-over row is a compound exercise used to build strength and size in both the lower and upper back. It targets nearly all of the muscles in the back, but particularly the lats, rhomboids, and lower back. It is commonly utilized as an accessory movement for the deadlift in powerlifting, but is also popular in strength and muscle-focused upper-body workouts.</string>
    <string name="bentoverbarbellrowVideo">T3N-TO4reLQ</string>
    <string name="dumbBellSingleArmRow">dumbbellsinglearmrow</string>
    <string name="dumbbellsinglearmrowDes">It is extremely important to make sure you use proper form when performing dumbbell rows to prevent injury. Do not lift more weight than your body can handle. When performing this exercise, it can be beneficial to use a bench or similar platform to lean on to support your body.</string>
    <string name="dumbbellsinglearmrowVideo">EEFHHOCfHgw</string>
    <string name="latPulldown">latpulldown</string>
    <string name="latpulldownDes">The pulldown exercise works the back muscles, especially the latissimus dorsi or the "lats."1﻿ It is performed at a workstation with adjustable resistance, usually plates. While sitting with your upper thighs restrained under a thigh pad, you pull a hanging bar down toward you, to reach chin level, and then release it back up with control for one repetition. This exercise can be done as part of an upper body strength workout.</string>
    <string name="latpulldownVideo">OcFCHdQHjVU</string>
    <string name="pullup">pullup</string>
    <string name="pullupDes">Doing a pullup requires more than just hanging from a bar and pulling until your chin is above it. Knowing the nuances will keep your shoulders healthy as you strengthen your back. You can think of the pullup in three different phases: The start from the bottom, the position halfway up, and the top position, where you need to find a way to keep on pulling.</string>
    <string name="pullupVideo">sIvJTfGxdFo</string>
    <string name="title_activity_execrise">ExecriseActivity</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="execriseDay">execriseDay</string>
    <string name="recommend">Recommendation</string>
    <string name="food1">food1</string>
    <string name="food2">food2</string>
    <string name="food3">food3</string>
    <string name="refresh">refresh</string>
    <string name="back">Back</string>
    <string name="plus">add</string>
    <string name="calo">Calories</string>
    <string name="carbo">Carbohydrates</string>
    <string name="protein">Proteins</string>
    <string name="fats">Fats</string>
</resources>